[package]
name = "astrobox-ng-wit"
version = "0.1.0"
edition = "2024"
description = "WIT bindings for AstroBox NG plugin system"
license = "MIT"
repository = "https://github.com/AstralSightStudios/AstroBox-NG-wit-crate"

[dependencies]
wit-bindgen = { version = "0.47.0", features = ["async", "async-spawn"] }
